--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "framerate",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://digitallancer.github.io/framerate/",
+  "homepage":"https://digitallancer.github.io/framerate",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
